[project]
name = "langchain-things"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Alonso Astroza Tagle", email = "alonsoastroza@gmail.com" }
]
dependencies = [
    "langchain>=0.2.11",
    "jupyter>=1.0.0",
    "langchain-openai>=0.1.20",
    "python-dotenv>=1.0.1",
    "langchain-community>=0.2.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/langchain_things"]
